  - Moved mosref/patch to lib/patch.
  - Removed debugging spam from lib/patch.
  - Modified MOSREF communications to operate in blocks of random sizes from 0 to 255 bytes,
    each block has a checksum, the overall message has a checksum.  This reduces the potential for 
    noise to tie up memory or hang the node.  (It will still cause the connection to break,
    though.)
  + Added HELP for properties.
  + Modified tcp-connect to yield 'connect first.
  + Restored tcp-forward.
  + Restored the MOSREF "proxy" command.
  + Restored the scan command.
  + Added test suite for all MOSREF commands using a local drone.
  + Moved all inline programs in MOSREF commands into their own modules to
    reduce excessive transmission traffic.
  + Ensured the initial mode of any executable created by WaspC is 0700.
  + Ensured that sudden collapse of a drone will not crash the console.
  + Ensured that all spawned processes on the console will traceback and halt
    intead of crashing the console.
  + Verify standalone operation of drone. 
  + Verify Cross-platform operation using win32.
  + Verify Cross-platform operation using darwin.
  + Tagged MOSREF as MOSREF 3.0b1
  + Tagged WASPVM as 0.4 final.

2006/08/16 Port MOSREF 2.0b4 into WaspVM.
  Found the final source tree for MOSREF, porting it into the current
  work on MOSREF..
  
  - Ported lib/env into the core.
  - Ported lib/clue-db into the core.
  - Ported lib/cons-filter into the core.
  - Ported lib/shuffle into the core.
  - Ported lib/format-filter into the core.
  - Ported mosref/shell into the core.
  - Merged mosref/base and mosref/endpoint into mosref/transport.
  - Updated implementations of Console and Drone endpoints.
  - Ported lib/args-fu into the core.
  - Ported lib/catch into the core.
  - Ported mosref/node into the core.
  - Ported mosref/parse into the core.
  - Ported mosref/format into the core.
  - Ported mosref/cmds into the core.
  - Ported mosref/listener into the core.